Completed documentation for products API
