# data/products.go
@@ -1,13 +1,8 @@
 package data
 
 import (
-	"encoding/json"
 	"fmt"
-	"io"
-	"regexp"
 	"time"
-
-	"github.com/go-playground/validator"
 )
 
 // Product defines the structue for an API product
@@ -17,23 +12,55 @@ type Product struct {
 	//
 	// required: true
 	// min: 1
-	ID          int     `json:"id"`
-	Name        string  `json:"name" validate:"required"`
-	Description string  `json:"description"`
-	Price       float32 `json:"price" validate:"gt=0"`
-	SKU         string  `json:"sku" validate:"required,sku"`
-	CreatedOn   string  `json:"-"`
-	UpdatedOn   string  `json:"-"`
-	DeletedOn   string  `json:"-"`
+	ID int `json:"id"`
+
+	// the name for this poduct
+	//
+	// required: true
+	// max length: 255
+	Name string `json:"name" validate:"required"`
+
+	// the description for this poduct
+	//
+	// required: false
+	// max length: 10000
+	Description string `json:"description"`
+
+	// the price for the product
+	//
+	// required: true
+	// min: 0.01
+	Price float32 `json:"price" validate:"gt=0"`
+
+	// the SKU for the product
+	//
+	// required: true
+	// pattern: [a-z]+-[a-z]+-[a-z]+
+	SKU       string `json:"sku" validate:"required,sku"`
+	CreatedOn string `json:"-"`
+	UpdatedOn string `json:"-"`
+	DeletedOn string `json:"-"`
 }
 
 type Products []*Product
 
-func GetProducts() Products {
+func ListAllProducts() Products {
 	return productsList
 }
 
-func PostProduct(p *Product) {
+// GetProductByID returns a single product which matches the id from the
+// database.
+// If a product is not found this function returns a ProductNotFound error
+func GetProductByID(id int) (*Product, error) {
+	i := findIndexByProductID(id)
+	if id == -1 {
+		return nil, ErrProductNotFound
+	}
+
+	return productsList[i], nil
+}
+
+func AddProduct(p *Product) {
 	p.ID = nextId()
 	p.CreatedOn = time.Now().UTC().String()
 	productsList = append(productsList, p)
@@ -44,26 +71,16 @@ func nextId() int {
 	return lp.ID + 1
 }
 
-func UpdateProduct(id int, p *Product) error {
-	_, pos, err := findProduct(id)
-	if err != nil {
-		return err
+func UpdateProduct(id int, p Product) error {
+	i := findIndexByProductID(id)
+	if i == -1 {
+		return ErrProductNotFound
 	}
 
 	p.ID = id
-	productsList[pos] = p
+	productsList[i] = &p
 
 	return nil
-}
-
-func findProduct(id int) (*Product, int, error) {
-	for i, p := range productsList {
-		if p.ID == id {
-			return p, i, nil
-		}
-	}
-
-	return nil, -1, ErrProductNotFound
 }
 
 var ErrProductNotFound = fmt.Errorf("Product not found")
@@ -90,28 +107,6 @@ func findIndexByProductID(id int) int {
 	}
 
 	return -1
-}
-
-func ToJSON(i interface{}, w io.Writer) error {
-	e := json.NewEncoder(w)
-	return e.Encode(i)
-}
-
-func (p *Product) FromJSON(w io.Reader) error {
-	e := json.NewDecoder(w)
-	return e.Decode(p)
-}
-
-func (p *Product) Validate() error {
-	validate := validator.New()
-	validate.RegisterValidation("sku", validateSKU)
-	return validate.Struct(p)
-}
-
-func validateSKU(fl validator.FieldLevel) bool {
-	re := regexp.MustCompile(`[a-z]+-[a-z]+-[a-z]+`)
-	matches := re.FindAllString(fl.Field().String(), -1)
-	return len(matches) == 1
 }
 
 var productsList = []*Product{
